--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:gravity="top|left"
+        android:gravity="top|start"
         android:layout_alignParentBottom="true"
-        android:maxLines="@integer/text_view_max_lines"
-        android:scrollIndicators="right" />
+        android:maxLines="@integer/text_view_max_lines" />
 </RelativeLayout>
