--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:gravity="top|start"
+        android:gravity="start|bottom"
         android:maxLines="@integer/text_view_max_lines"
-        android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </RelativeLayout>
