--- a/app/src/main/res/layout/activity_scroll_pi.xml
+++ b/app/src/main/res/layout/activity_scroll_pi.xml
@@ -23,7 +23,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".ScrollPiActivity">
+                tools:context="com.gmail.pi.scroll.ScrollPiActivity">
 
     <TextView
         android:id="@+id/textView"
