Add digit counter, clean up threading model, make scroll text smaller

--- a/app/src/main/res/layout/activity_scroll_pi.xml
+++ b/app/src/main/res/layout/activity_scroll_pi.xml
@@ -15,27 +15,47 @@
   ~ IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.gmail.pi.scroll.ScrollPiActivity">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/footerLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:gravity="start|bottom"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:background="@color/material_darker">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_label"
+            android:layout_weight="2"
+            android:gravity="center_vertical|start"
+            android:text="@string/label_digits"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/digitsCountText"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_label"
+            android:layout_weight="1"
+            android:gravity="center_vertical|end"
+            android:text="@string/field_digits_count_zero"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            android:typeface="monospace"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/digitsScrollText"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@id/footerLayout"
+        android:gravity="bottom|start"
         android:typeface="monospace"/>
+
 </RelativeLayout>
